More Than Half Done

--- a/project/about.html
+++ b/project/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>About Us - Excel Mind College</title>
+  <title>WDD131 | About Us | Excel Mind College</title>
 
   <meta name="description"
     content="Learn about Excel Mind College | our mission, values, history, and why we are committed to educational excellence.">
@@ -59,12 +59,29 @@
 
   <main>
     <section class="hero">
-      <picture>
-        <source srcset="images/desktop-excelmind-school-building.webp" media="(min-width: 768px)">
-        <img src="images/mobile-excelmind-school-building.webp" alt="ExcelMind Building">
-      </picture>
-      <h1>About Excel Mind College</h1>
-      <p class="tagline">Excellence. Discipline. Vision.</p>
+
+      <div>
+        <picture>
+          <source srcset="images/desktop-excelmind-school-building.webp" media="(min-width: 768px)">
+          <img src="images/mobile-excelmind-school-building.webp" alt="ExcelMind Building">
+        </picture>
+      </div>
+
+      <div>
+        <div class="second-content">
+          <!-- <h1>About Excel Mind College</h1> -->
+          <!-- <p class="tagline">Excellence. Discipline. Vision.</p> -->
+          <h1>Shaping Minds, Inspiring Futures</h1>
+          <p id="tagline">Building a Legacy of Academic Excellence and Character.</p>
+          <p class="tagline">“Excel Mind College is more than a school — it is a dynamic learning community committed to
+            nurturing well-rounded individuals. Since our inception, we have upheld a tradition of excellence by
+            providing innovative education, dedicated mentorship, and a supportive environment where students are
+            encouraged to dream big, think critically, and act with integrity. Our mission is to develop future leaders
+            who are equipped with the knowledge, values, and confidence to thrive in an ever-evolving world.”</p>
+        </div>
+      </div>
+
+
     </section>
 
     <section class="intro">
@@ -129,12 +146,8 @@
 
 
   <footer>
-    <p>© 2025 Excel Mind College</p>
-    <div class="social-icons">
-      <a href="#"><img src="" alt="Facebook" /></a>
-      <a href="#"><img src="" alt="Instagram" /></a>
-      <a href="mailto:info@excelmind.edu"><img src="" alt="Email" /></a>
-    </div>
+    <p>© <span id="current-year"></span> | Excel Mind College | Nigeria</p>
+    <p id="last-modified"></p>
   </footer>
 
 </body>
