--- a/project/admission.html
+++ b/project/admission.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Admission - Excel Mind College</title>
+  <title>WDD131 | Admission | Excel Mind College</title>
 
   <meta name="description"
     content="Apply to Excel Mind College. Complete the admission form and begin your journey toward academic success.">
@@ -61,12 +61,31 @@
   <main>
 
     <section class="hero">
-      <picture>
-        <source srcset="images/desktop-campusStudent-admission.webp" media="(min-width: 767px)">
-        <img src="images/mobile-campusStudent-admission.webp" alt="">
-      </picture>
-      <h1>Apply for Admission</h1>
-      <p class="tagline">Your journey starts here</p>
+
+      <div>
+        <picture>
+          <source srcset="images/desktop-campusStudent-admission.webp" media="(min-width: 767px)">
+          <img src="images/mobile-college-student-admission(1).webp" alt="">
+        </picture>
+      </div>
+
+      <div>
+        <div class="second-content">
+          <h1>Apply for Admission</h1>
+          <!-- <h1>Begin Your Journey to Excellence</h1> -->
+          <p id="tagline">Unlocking Bright Futures, One Student at a Time.</p>
+          <p class="tagline">“At Excel Mind College, our admissions process is designed to welcome passionate, curious,
+            and ambitious learners into a vibrant community where every child is inspired to lead, innovate, and
+            succeed.
+            We offer a nurturing environment, world-class facilities, and a curriculum that balances academic rigor with
+            character-building experiences — empowering students to reach their full potential and shape a better
+            tomorrow.”</p>
+        </div>
+
+
+      </div>
+
+
     </section>
 
     <section class="intro">
@@ -163,12 +182,8 @@
 
 
   <footer>
-    <p>© 2025 Excel Mind College</p>
-    <div class="social-icons">
-      <a href="#"><img src="" alt="Facebook" /></a>
-      <a href="#"><img src="" alt="Instagram" /></a>
-      <a href="mailto:info@excelmind.edu"><img src="" alt="Email" /></a>
-    </div>
+    <p>© <span id="current-year"></span> | Excel Mind College | Nigeria</p>
+    <p id="last-modified"></p>
   </footer>
 
 </body>
