--- a/project/index.html
+++ b/project/index.html
@@ -92,46 +92,59 @@
       <button id="all">All</button>
       <button id="science">Science</button>
       <button id="arts">Arts</button>
-      <button id="tech">Tech</button>
+      <button id="commercial">Commercial</button>
     </div>
 
     <section id="streams" class="stream-container">
 
     </section>
 
-    <section class="testimonials">
-      <h2>What Our Students Say</h2>
-      <div id="testimonialBox" class="testimonial-box">
-        <p class="quote">Our Students Testimonials</p>
-        <h4 class="person"></h4>
-      </div>
-      <!-- <button id="nextTestimonial">Next</button> -->
-    </section>
+    <div class="other-content">
 
-    <section class="newsletter">
-      <form action="#" id="newsletter-form">
-        <h3>Subscribe to Our Newsletter</h3>
-
-        <div class="form-control">
-          <label for="sub-email">Email</label>
-
-          <input type="email" id="sub-email" name="email" placeholder="Enter your email">
-
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-            <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" class="checkmark" />
-          </svg>
-
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-            <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
-              class="close" />
-          </svg>
-
-          <small id="error-message">Error Message</small>
+      <section class="testimonials">
+        <h2>What Our Students Say</h2>
+        <div id="testimonialBox" class="testimonial-box">
+          <p class="quote">Our Students Testimonials</p>
+          <h4 class="person"></h4>
         </div>
+        <!-- <button id="nextTestimonial">Next</button> -->
+      </section>
 
-        <input type="submit" value="Subscribe" id="subscribeBtn">
-      </form>
-    </section>
+      <section class="newsletter">
+        <form action="#" id="newsletter-form">
+          <h3>Subscribe to Our Newsletter</h3>
+
+          <div class="form-control">
+            <label for="sub-email">Email</label>
+
+            <input type="email" id="sub-email" name="email" placeholder="Enter your email">
+
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+              <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" class="checkmark" />
+            </svg>
+
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+              <path
+                d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
+                class="close" />
+            </svg>
+
+            <small id="error-message">Error Message</small>
+          </div>
+
+          <input type="submit" value="Subscribe" id="subscribeBtn">
+        </form>
+      </section>
+
+      <section class="map">
+        <h2>Visit Us</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.9823237826095!2d3.268485674236133!3d6.649112193345556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b90bb13abc3df%3A0x129d6953357f3271!2sMeiran%20Rd%2C%20Alimosho%2C%20Abule-Egba%2FAboru%2FMeiran%2FAlagbado%20102213%2C%20Lagos!5e0!3m2!1sen!2sng!4v1754433762912!5m2!1sen!2sng"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </section>
+    </div>
+
 
     <div class="modal" id="subscribeModal">
       <div class="modal-content">
@@ -140,13 +153,6 @@
       </div>
     </div>
 
-    <section class="map">
-      <h3>Visit Us</h3>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.9823237826095!2d3.268485674236133!3d6.649112193345556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b90bb13abc3df%3A0x129d6953357f3271!2sMeiran%20Rd%2C%20Alimosho%2C%20Abule-Egba%2FAboru%2FMeiran%2FAlagbado%20102213%2C%20Lagos!5e0!3m2!1sen!2sng!4v1754433762912!5m2!1sen!2sng"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
   </main>
 
 
