--- a/project/about.html
+++ b/project/about.html
@@ -73,7 +73,7 @@
           <!-- <p class="tagline">Excellence. Discipline. Vision.</p> -->
           <h1>Shaping Minds, Inspiring Futures</h1>
           <p id="tagline">Building a Legacy of Academic Excellence and Character.</p>
-          <p class="tagline">“Excel Mind College is more than a school — it is a dynamic learning community committed to
+          <p class="tagline">“Excel Mind College is more than a school, it is a dynamic learning community committed to
             nurturing well-rounded individuals. Since our inception, we have upheld a tradition of excellence by
             providing innovative education, dedicated mentorship, and a supportive environment where students are
             encouraged to dream big, think critically, and act with integrity. Our mission is to develop future leaders
