--- a/project/index.html
+++ b/project/index.html
@@ -25,14 +25,14 @@
 <body>
 
   <header>
-    <img src="images/website_logo.webp" alt="Excel Mind College Logo" class="logo">
+    <img src="images/website_logo.webp" alt="Excel Mind College Logo" class="logo" width="223" height="180">
 
-    <p class="main-heading">ExcelMind College</p>
+    <h1 class="main-heading">ExcelMind College</h1>
 
     <nav>
       <ul class="sidebar" id="sidebar">
-        <li id="close"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960"
-              width="26px" fill="#e3e3e3">
+        <li id="close"> <a href="#" aria-label="Close menu"><svg xmlns="http://www.w3.org/2000/svg" height="26px"
+              viewBox="0 -960 960 960" width="26px" fill="#e3e3e3">
               <path
                 d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
             </svg></a></li>
@@ -49,8 +49,8 @@
         <li class="hideOnMobile"> <a href="about.html">About</a></li>
         <li class="hideOnMobile"> <a href="#">Contact</a></li>
         <li class="hideOnMobile"> <a href="#"> blog</a></li>
-        <li id="menu"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960"
-              width="26px" fill="#e3e3e3">
+        <li id="menu"> <a href="#" aria-label="Open menu"><svg xmlns="http://www.w3.org/2000/svg" height="26px"
+              viewBox="0 -960 960 960" width="26px" fill="#e3e3e3">
               <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
             </svg></a></li>
       </ul>
@@ -64,7 +64,7 @@
       <div>
         <picture>
           <source srcset="images/desktop-school-building(2).webp" media="(min-width: 768px)">
-          <img src="images/mobile-school-building(2).webp" alt="ExcelMind Building">
+          <img src="images/mobile-school-building(2).webp" alt="ExcelMind Main Building" width="1080" height="1440">
         </picture>
       </div>
 
@@ -89,10 +89,10 @@
     </section>
 
     <div class="filters">
-      <button id="all">All</button>
-      <button id="science">Science</button>
-      <button id="arts">Arts</button>
-      <button id="commercial">Commercial</button>
+      <button aria-pressed="false" id="all">All</button>
+      <button aria-pressed="false" id="science">Science</button>
+      <button aria-pressed="false" id="arts">Arts</button>
+      <button aria-pressed="false" id="commercial">Commercial</button>
     </div>
 
     <section id="streams" class="stream-container">
@@ -102,7 +102,7 @@
     <div class="other-content">
 
       <section class="testimonials">
-        <h2>What Our Students Say</h2>
+        <h3>What Our Students Say</h3>
         <div id="testimonialBox" class="testimonial-box">
           <p class="quote">Our Students Testimonials</p>
           <h4 class="person"></h4>
@@ -117,7 +117,7 @@
           <div class="form-control">
             <label for="sub-email">Email</label>
 
-            <input type="email" id="sub-email" name="email" placeholder="Enter your email">
+            <input type="email" id="sub-email" name="email" placeholder="Enter your email" autocomplete="email">
 
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
               <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" class="checkmark" />
@@ -137,11 +137,11 @@
       </section>
 
       <section class="map">
-        <h2>Visit Us</h2>
+        <h3>Visit Us</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.9823237826095!2d3.268485674236133!3d6.649112193345556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b90bb13abc3df%3A0x129d6953357f3271!2sMeiran%20Rd%2C%20Alimosho%2C%20Abule-Egba%2FAboru%2FMeiran%2FAlagbado%20102213%2C%20Lagos!5e0!3m2!1sen!2sng!4v1754433762912!5m2!1sen!2sng"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+          width="600" height="450" style="border:0;" title="Google Maps location of Excel Mind College"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
     </div>
 
