--- a/project/admission.html
+++ b/project/admission.html
@@ -12,13 +12,25 @@
   <meta name="keywords" content="EMC admissions, school application form, enroll">
   <meta name="author" content="Joshua Elemide Damilare">
 
+  <!-- Preconnect for fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
+  <!-- Preload fonts CSS and load asynchronously -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap"
+    as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap">
+  </noscript>
 
-  <link rel="stylesheet" href="styles/index.css">
+  <!-- Preload main CSS and load asynchronously -->
+  <link rel="preload" href="styles/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="styles/index.css">
+  </noscript>
 
+  <!-- Defer JS -->
   <script src="scripts/admission.js" defer></script>
 </head>
 
