--- a/project/about.html
+++ b/project/about.html
@@ -117,7 +117,7 @@
       </section>
 
 
-      <section class="newsletter">
+      <section class="newsletter about-message">
 
         <form id="newsletter-form">
           <h3>Send Us a Message</h3>
