--- a/project/index.html
+++ b/project/index.html
@@ -82,11 +82,14 @@
       </div>
 
     </section>
+    <div>
+      <section class="intro">
+        <p>We provide excellent training in Science, Arts, and Technology, empowering students with the skills and
+          mindset
+          to thrive.</p>
+      </section>
+    </div>
 
-    <section class="intro">
-      <p>We provide excellent training in Science, Arts, and Technology, empowering students with the skills and mindset
-        to thrive.</p>
-    </section>
 
     <div class="filters">
       <button aria-pressed="false" id="all">All</button>
@@ -95,9 +98,12 @@
       <button aria-pressed="false" id="commercial">Commercial</button>
     </div>
 
-    <section id="streams" class="stream-container">
+    <div>
+      <section id="streams" class="stream-container">
 
-    </section>
+      </section>
+    </div>
+
 
     <div class="other-content">
 
@@ -105,7 +111,9 @@
         <h3>What Our Students Say</h3>
         <div id="testimonialBox" class="testimonial-box">
           <p class="quote">Our Students Testimonials</p>
-          <h4 class="person"></h4>
+          <div>
+            <h4 class="person"></h4>
+          </div>
         </div>
       </section>
 
